--- a/yljapp/src/main/res/layout/fragment_bt_connect.xml
+++ b/yljapp/src/main/res/layout/fragment_bt_connect.xml
@@ -13,7 +13,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="bluetooth state" />
+                android:text="@string/connect_bt_state" />
             <Switch
                 android:id="@+id/switch_bluetooth"
                 android:layout_alignParentRight="true"
@@ -27,7 +27,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="device list"/>
+                android:text="@string/connect_device_list"/>
             <Button
                 android:id="@+id/btn_refresh"
                 android:layout_alignParentRight="true"
